commented out addition of focusChangeListeners; added WHEN_IN_FOCUSED_WINDOW to InputMap mappings